api-resources/default/308330db-1fa1-4a27-b76b-918847ee2118/1/default_308330db-1fa1-4a27-b76b-918847ee2118_v1_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: petstore
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: external
    namespace: gateway-system
  rules:
  - matches:
    - method: GET
      path:
        type: Exact
        value: /cat
  - matches:
    - method: POST
      path:
        type: Exact
        value: /cat
  - matches:
    - method: GET
      path:
        type: Exact
        value: /dog
  - matches:
    - method: POST
      path:
        type: Exact
        value: /dog
